* By default use logging only on development
* Uses raise_errors, dump_errors, show_exceptions as Sinatra::Base do
* Refactored Padrino::Application
* Added a global configuration in config/apps.rb used by each Padrino Applicaitons
* Moved session_secret in global configuration project
* Use SecureRandom to generate session secret

== 0.9.26

* Padrino::Logger compatible with Rack::CommonLogger
* Added session_path and ability to use custom Rack::Session::Cookie options
* Fixed dependency loader
* Fixed mounting sub-apps
* Fixed shared sessions

== 0.9.25

* Fixes to allow flexible libraries in padrino-cache
* Allow select tag to take a range of options [Thanks activestylus]
* Allow grouped options in a select_tag [Thanks activestylus]
* Use MongoMapper official gem
* Fixes ERBHandler type detection
* Fixes Routes with globs that when something is after the glob i.e. get :show, :map => '/pictures/*path.html'
* Updated http_router to ~> 0.7.0
* Completed Padrino Cache Doc [Thanks to Onethirtyfive]
* Added a global Padrino.cache option
* Padrino-Cache now is able to store ruby objects
* Fix expire_in on redis store in Padrino Cache
* Added Ajax Helpers
* Use https://github.com/padrino/padrino-static for download js and ujs adapters (if no internet connection use a local copy)
* Added session_secret task generator and as default in our app templates
* Correctly work with nested parameters sent to url [Thanks to Funny-falcon]
* Fix ajax request detection for dataType: 'application/javascript'
* Removed lib from excluded list of our reloader
* Added in our logs app name space for urls and layouts
* Preserve spaces for text_area using admin/haml
* Prevent using missing rendering engines on admin allowing user to use a different way
* Fixed AbstractFormBuilder class scope name [Thanks to Funny-falcon]
* Changed layout of our logger
* Logs for cache GET and SET
* Caching instructions in main app template
* Fixes NotFound Sinatra Errors