@@ -110,7 +110,10 @@ module Padrino
           # If engine is a hash then render data converted to json
           return engine.to_json if engine.is_a?(Hash)
 
-          # Data can actually be a hash of options in certain cases
+          # If engine is nil, ignore engine parameter
+          engine, data = data, options if engine.nil? && data
+
+          # Data can actually be a hash of options in certain render cases
           options.merge!(data) && data = nil if data.is_a?(Hash)
 
           # If an engine is a string then this is a likely a path to be resolved
