@@ -9,6 +9,7 @@ module Padrino
       #   partial 'photo/item', :object => @photo
       #   partial 'photo/item', :collection => @photos
       #   partial 'photo/item', :locals => { :foo => :bar }
+      #   partial 'photo/item', :engine => :erb
       #
       def partial(template, options={})
         options.reverse_merge!(:locals => {}, :layout => false)
@@ -16,6 +17,7 @@ module Padrino
         object_name = path[-1].to_sym
         path[-1] = "_#{path[-1]}"
         template_path = File.join(path)
+        explicit_engine = options.delete(:engine)
         raise 'Partial collection specified but is nil' if options.has_key?(:collection) && options[:collection].nil?
         if collection = options.delete(:collection)
           options.delete(:object)
@@ -23,13 +25,13 @@ module Padrino
           collection.map { |member|
             counter += 1
             options[:locals].merge!(object_name => member, "#{object_name}_counter".to_sym => counter)
-            render(template_path, nil, options.dup)
+            render(explicit_engine, template_path, options.dup)
           }.join("\n")
         else
           if member = options.delete(:object)
             options[:locals].merge!(object_name => member)
           end
-          render(template_path, nil, options.dup)
+          render(explicit_engine, template_path, options.dup)
         end
       end
       alias :render_partial :partial
