@@ -17,6 +17,7 @@
 * Added a global configuration in config/apps.rb used by each Padrino Applicaitons
 * Moved session_secret in global configuration project
 * Use SecureRandom to generate session secret
+* Support 'partial' in Sinatra with explicit engine
 
 == 0.9.26
 
